@@ -85,12 +85,12 @@ typedef void * SCM;
  * to scm_vector elts, functions, &c are not munged.
  */
 #ifdef _UNICOS
-# define SCM2PTR(x) ((int) (x) >> 3)
-# define PTR2SCM(x) (((SCM) (x)) << 3)
+# define SCM2PTR(x) ((void *) (SCM_UNPACK (x) >> 3))
+# define PTR2SCM(x) (SCM_PACK (((scm_bits_t) (x)) << 3))
 # define SCM_POINTERS_MUNGED
 #else
-# define SCM2PTR(x) (x)
-# define PTR2SCM(x) ((SCM) (x))
+# define SCM2PTR(x) ((void *) (SCM_UNPACK (x)))
+# define PTR2SCM(x) (SCM_PACK ((scm_bits_t) (x)))
 #endif /* def _UNICOS */
 
 
