@@ -1,3 +1,11 @@
+2000-03-20  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* tags.h (SCM2PTR, PTR2SCM):  Use SCM_PACK / SCM_UNPACK correctly.
+
+	* numbers.h (SCM_INUMP, SCM_MAKINUM, SCM_INUM0, SCM_COMPLEX_REAL,
+	SCM_COMPLEX_IMAG, SCM_NUMP, SCM_BDIGITS):  Use SCM_PACK /
+	SCM_UNPACK / SCM2PTR correctly.
+
 2000-03-20  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* gc.c (adjust_gc_trigger): Improved documentation.
